[package]
name = "spl_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.1"
# solana-account-decoder = "1.14.2"
solana-sdk = "1.14.3"
spl-token = "3.5.0"
# url = { version = "2.2.2", features = ["serde"]}
dotenv = "0.15.0"
spl-associated-token-account="1.1.1"
# Metaplex SPL token metadata
mpl-token-metadata = "1.4.3"
# JSON parsing
serde = "1.0.145"
serde_json = "1.0.85"
# Borsh object serialization
borsh = "0.9.3"